methods.picture.PictureMono1.scala.error
Erreur de compilation :
PictureMono1:19: error: ':' expected but ')' found.
def avancer(n){
             ^PictureMono1:44: error: identifier expected but '}' found.
}
^