methods.picture.PictureMono1.scala.code
override def run() {
  faireV()
  deplacer()
  faireV()
  deplacer()
  faireV()
  deplacer()
  faireV()
  
}

def deplacer() {
  droite()
  avancer(5)
  gauche()
  gauche()
}

def avancer(n){
  for (i <- 1 to n){
    avance()
  }
}

def marquerSol(){
  baisseBrosse()
  leveBrosse()
}

def faireV() {
  avancer(2)
  marquerSol()
  avancer(2)
  marquerSol()
  avancer(2)
  gauche()
  avancer(1)
  gauche()
  avancer(3)
  marquerSol()
  avancer(3)
}